@@ -12,6 +12,7 @@ import org.springframework.web.client.RestTemplate;
 import org.springframework.web.util.UriComponentsBuilder;
 
 import java.io.BufferedReader;
+import java.io.IOException;
 import java.io.InputStreamReader;
 import java.net.URI;
 import java.net.URISyntaxException;
@@ -24,7 +25,7 @@ import java.util.List;
 @Slf4j
 public class OpenApiServiceImpl implements OpenApiService {
 
-    //    환경 변수 값을 주입
+//    환경 변수 값을 주입
     @Value("${api.base-url}")
     private String baseUrl;
 
@@ -36,23 +37,21 @@ public class OpenApiServiceImpl implements OpenApiService {
 
     private final ObjectMapper objectMapper;
 
-
     @Override
-    public List<PetTourDTO> fetchData() throws java.io.IOException {
+    public List<PetTourDTO> fetchData() throws IOException {
 
         //   빌더 패턴
         String urlStr = UriComponentsBuilder
-                .fromHttpUrl(baseUrl)
-                .path(areaBasedList)
-                .queryParam("serviceKey", serviceKey)
-                .queryParam("MobileOS", "ETC")
-                .queryParam("MobileApp", "TestApp")
-                .queryParam("_type", "json")
-                .build()
-                .toUriString();
+            .fromHttpUrl(baseUrl)
+            .path(areaBasedList)
+            .queryParam("serviceKey", serviceKey)
+            .queryParam("MobileOS", "ETC")
+            .queryParam("MobileApp", "TestApp")
+            .queryParam("_type", "json")
+            .build()
+            .toUriString();
 
-        URI uri = URI.create(urlStr);
-        URL url = uri.toURL();
+        URL url = new URL(urlStr);
         log.info(urlStr);
         BufferedReader bufferedReader = new BufferedReader(new InputStreamReader(url.openStream(), "UTF-8"));
 
@@ -64,32 +63,33 @@ public class OpenApiServiceImpl implements OpenApiService {
 
         bufferedReader.close();
 
-//        json 응답
+//        JSON 응답
         JsonNode jsonResponse = objectMapper.readTree(result.toString());
-        if (jsonResponse.has("error")) {
+        if(jsonResponse.has("error")){
             return null;
         }
 
         JsonNode itemsArray = jsonResponse.get("response").get("body").get("items").get("item");
         List<PetTourDTO> petTourList = new ArrayList<>();
 
-        for (JsonNode item : itemsArray) {
+        for(JsonNode item : itemsArray){
             PetTourDTO petTourDTO = new PetTourDTO();
             petTourDTO.setTitle(item.get("title").asText());
-            petTourDTO.setAreacode(item.get("areacode").asText());
+            petTourDTO.setAreaCode(item.get("areacode").asText());
             petTourDTO.setAddr1(item.get("addr1").asText());
             petTourDTO.setAddr2(item.get("addr2").asText());
             petTourDTO.setTel(item.get("tel").asText());
-            petTourDTO.setContentid(item.get("contentid").asText());
-            petTourDTO.setFirstimage(item.get("firstimage").asText());
-            petTourDTO.setFirstimage2(item.get("firstimage2").asText());
+            petTourDTO.setContentId(item.get("contentid").asText());
+            petTourDTO.setFirstImage(item.get("firstimage").asText());
+            petTourDTO.setFirstImage2(item.get("firstimage2").asText());
             petTourDTO.setZipcode(item.get("zipcode").asText());
 
             petTourList.add(petTourDTO);
-
         }
-            return petTourList;
+
+        return petTourList;
     }
+
 
     @Value("${api.base-url2}")
     private String baseUrl2;
@@ -97,27 +97,32 @@ public class OpenApiServiceImpl implements OpenApiService {
     @Value("${api.uddi-9c79ebd1}")
     private String uddi;
 
+    @Override
+    public CongestionDTO fetchData2() throws IOException, URISyntaxException {
+        RestTemplate restTemplate = new RestTemplate();
+        //   빌더 패턴
+        String urlStr = UriComponentsBuilder
+                .fromHttpUrl(baseUrl2)
+                .path(uddi)
+                .queryParam("serviceKey", serviceKey)
+                .queryParam("page", 1)
+                .queryParam("perPage", 10)
+                .queryParam("_type", "json")
+                .build()
+                .toUriString();
 
-        @Override
-        public CongestionDTO fetchData2() throws java.io.IOException, URISyntaxException {
-            RestTemplate restTemplate = new RestTemplate();
-            //   빌더 패턴
-            String urlStr = UriComponentsBuilder
-                    .fromHttpUrl(baseUrl2)
-                    .path(uddi)
-                    .queryParam("serviceKey", serviceKey)
-                    .queryParam("page", 1)
-                    .queryParam("perpage", 10)
-                    .queryParam("_type", "json")
-                    .build()
-                    .toUriString();
+        URI uri = new URI(urlStr);
 
-
-            URI uri = new URI(urlStr);
-//            스프링 프레임워크5이상 restTemplate
-            CongestionDTO response = restTemplate.getForObject(uri, CongestionDTO.class);
-            return response;
-
-        }
+//        스프링 프레임워크5 이상 restTemplate
+        CongestionDTO response = restTemplate.getForObject(uri, CongestionDTO.class);
+        return response;
+    }
 }
+
+
+
+
+
+
+
 
